2010-xx-xx:
    * version 2.4
    * IMPORTANT: The default UI now shows the toolbar by default. This was done since we got rid
      off the statusbar and the toolbar (preferably with small icons) shows exactly the same information
      and even some more (rss feeds, better security information, ...)
    * IMPORTANT: The statusbar and command line have been merged in a single row as also Firefox
      4 hides the statusbar by default now
    * IMPORTANT: Removed 'laststatus' option but add a 'status' option in contrast
      to decide which elements are shown in the new style status bar
    * IMPORTANT: Support for configurable hint characters; This basically brings back the old
      hint behavior for those who prefer it. See the 'hintchars' option. Patch by caisui
    * Some colors have changed their default values (like InfoMsg and ModeMsg)
    * Pressing Escape now clears any previous command output. Scrolling the web page, however, does NOT
      not clear it anymore (as it used to do)
    * History, bookmarks and :open output limit the width of the URL column to 50% so you can
      always see (and interact with hints) the title column as well
    * Better escape certain characters when yanking links to improve pasting in other applications
    * :dialog passwords
    * Fix hints display on some pages like stackoverflow (thanks Jez)
    * Fix relative paths in :cd
    * Support rich text editor written by HTML.
      mode is into editing mode (INSERT, TEXTAREA, VISUAL) if the focused window is editable.
      And update map [m]i[m]: into be editing mode if editable otherwise CARET mode.
    * Strings starting with a "." are no longer treated as urls by :open et.al.
    * add *-javascript* flag to [c]:abbreviate[c], [c]:iabbrev[c] and [c]:cabbrev[c].
    * :history -remove , remove history items by name/tags/url (only by date with :sanitize).
    * Add image-related hint modes: [m];x[m] for title/alt text, and [m];S[m] and [m];A[m]
      for saving.